Bug 45560 - FILEOPEN Bad import of Docx textbox
Summary: FILEOPEN Bad import of Docx textbox
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: Other All
: medium normal
Assignee: Cédric Bosdonnat
URL:
Whiteboard: target:3.6.0 target:3.5.1
Keywords:
: 41570 45193 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-02-02 11:35 UTC by Arnaud Versini
Modified: 2012-05-03 21:57 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
File with (10.55 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2012-02-02 11:35 UTC, Arnaud Versini
Details
Word rendering (3.44 KB, application/pdf)
2012-02-02 11:36 UTC, Arnaud Versini
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Arnaud Versini 2012-02-02 11:35:43 UTC
Created attachment 56553 [details]
File with

Hello,

Opening file with textbox doesn't import correctly text boxes : 
- The size of the textbox is incorrect, the text box always have the same dimension
- The position of the textbox is also incorrect, always the same location on the page
- Border properties are also not loaded

Steps to reproduce
- Create a document on Word in docx with some text boxes and personalize these (or open the bug attachment)
- Open the document and compare the rendering with word, all properties listed above are bad (or compare to the pdf attachment)
Comment 1 Arnaud Versini 2012-02-02 11:36:17 UTC
Created attachment 56554 [details]
Word rendering
Comment 2 Cédric Bosdonnat 2012-02-02 12:01:32 UTC
Miklos, that one, may interest you :)
Comment 3 Miklos Vajna 2012-02-02 14:56:29 UTC
ACK, will try to have a look.
Comment 4 tester8 2012-02-03 02:12:30 UTC
Reproduced with

LibreOffice 3.5.0rc3
7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Ubuntu 10.04.3 x86
Linux 2.6.32-38-generic Russian UI

changed to new.
Comment 5 tester8 2012-02-03 02:19:28 UTC
*** Bug 45193 has been marked as a duplicate of this bug. ***
Comment 6 Not Assigned 2012-02-23 04:59:47 UTC
Cédric Bosdonnat committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=94698d89f675da9b4da1143fa150bbd76def6ccf

fdo#45560: Fixed docx textbox position and size import
Comment 7 Not Assigned 2012-02-23 05:00:29 UTC
Cédric Bosdonnat committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e3e7623bf6cecf0e32912347a58e5a2c7297099d

fdo#45560: Fixed docx textbox borders style and width import
Comment 8 Cédric Bosdonnat 2012-02-23 05:01:48 UTC
Fixed in master.
Comment 9 Not Assigned 2012-02-24 03:11:59 UTC
Cédric Bosdonnat committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8e1dbe2b4b1d36f9994ee23c8d6074d350d17508&g=libreoffice-3-5

fdo#45560: Fixed docx textbox position and size import


It will be available in LibreOffice 3.5.2.
Comment 10 Not Assigned 2012-02-24 03:12:31 UTC
Cédric Bosdonnat committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e80d2ea82edf686bf92a6988c1a194a5fc5649d0&g=libreoffice-3-5

fdo#45560: Fixed docx textbox borders style and width import


It will be available in LibreOffice 3.5.2.
Comment 11 Not Assigned 2012-02-24 06:25:57 UTC
Cédric Bosdonnat committed a patch related to this issue.
It has been pushed to "libreoffice-3-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=79cacbc9c9b28a1a54f7f589469c0c5f3a5744a3&g=libreoffice-3-5-1

fdo#45560: Fixed docx textbox position and size import


It will be available already in LibreOffice 3.5.1.
Comment 12 Not Assigned 2012-02-24 06:26:27 UTC
Cédric Bosdonnat committed a patch related to this issue.
It has been pushed to "libreoffice-3-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0bbd6c4f6f858f2caee10b7cceab06b423cce97e&g=libreoffice-3-5-1

fdo#45560: Fixed docx textbox borders style and width import


It will be available already in LibreOffice 3.5.1.
Comment 13 Rainer Bielefeld Retired 2012-04-05 08:04:10 UTC
I added Fix submitter as assignee because this will ease queries and bug tracking.
Comment 14 Rainer Bielefeld Retired 2012-05-03 21:57:54 UTC
*** Bug 41570 has been marked as a duplicate of this bug. ***