fdo#45560: Fixed docx textbox borders style and width import