sw/source/core/unocore/unoprnms.cxx
@@ -784,6 +784,9 @@ const SwPropNameTab aPropNameTab = {
 /* 0745 UNO_NAME_RSID */	         {MAP_CHAR_LEN("Rsid")},
 /* 0746 UNO_NAME_PARRSID */	         {MAP_CHAR_LEN("ParRsid")},
 
+/* 0747 UNO_NAME_LINE_STYLE */	         {MAP_CHAR_LEN("LineStyle")},
+/* 0748 UNO_NAME_LINE_WIDTH */	         {MAP_CHAR_LEN("LineWidth")},
+
 // new items in this array must match enum SwPropNameIds
 };
 
